2006-93-23  Rodrigo Moya <rodrigo@novell.com>

	* activate-settings-daemon.c (popup_error_message): use gtk_dialog_run,
	we want the dialog to show up for more than less than a second.

2006-01-23  Thomas Wood  <thos@gnome.org>

	* file-transfer-dialog.c: (create_titled_label): Prevent a
	Gtk-CRITICAL error

2006-01-22  Rodrigo Moya <rodrigo@novell.com>

	Fixes #168790

	* capplet-stock-icons.c (capplet_register_stock_icons): don't use
	"capplet" in user-visible strings.

2005-11-14  Kjartan Maraas  <kmaraas@gnome.org>

	* capplet-stock-icons.c: (capplet_register_stock_icons): Remove
	unused variable.
	* file-transfer-dialog.c: (file_transfer_dialog_update_num_files):
	Fix format specifiers.
	* gconf-property-editor.c: Mark some functions static.
	* gnome-theme-info.c: (top_theme_dir_changed),
	(top_icon_theme_dir_changed): Remove unused code.

2005-10-11  Muktha  <muktha.narayan@wipro.com>

	* gnome-theme-info.h:
	* gnome-theme-info.c (gnome_theme_read_meta_theme)
	(gnome_theme_meta_info_free) (gnome_theme_meta_info_print)
	(gnome_theme_meta_info_compare): Update the desktop font in 
	addition to the application font when 'apply font' in large print
	themes is selected. Fixes #123551.
 
2005-08-14  Rodney Dawes  <dobey@novell.com>

	* theme-thumbnail.c (create_image): Get the Example icon that is
	specified by the icon theme, if it exists, and then fall back through
	a better list of icons to use. Gnome uses gnome-fs-directory currently
	for folders, so we should prefer that over folder, but the icon naming
	spec lists x-directory-normal for standard folders, so we should prefer
	that above other folders

	This fixes issues with the wrong icon being drawn in the thumbnail, due
	to the icon theme providing the gnome folder icon, but inheriting from
	another theme which provides a different icon named "folder" for KDE or
	other desktops

2005-07-27  Sebastien Bacher  <seb128@debian.org>

	* capplet-util.c: (capplet_set_icon): set a default icon for capplets, 